# travel-plan

./: README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.xml  travel-plan-keystore.jks  tsconfig.json  vite.config.ts
assets/: CreateChecklist-B7pj6kMG.css  CreateChecklist-BSy4ZYC6.js  CreateChecklist-CnYVgLmA.js  CreateChecklist-DLzoCRWx.js  CreateChecklist-DbmVLYP6.js  CreateChecklist-TNkg9STE.js  CreateChecklist-p7K5DJqK.js  CreateChecklist-vfHZ3e1L.css  CreateExpense-BYDMSdaY.js  CreateExpense-BdJyHUCf.css  CreateExpense-Ce5G351P.js  CreateExpense-CthyElRT.js  CreateExpense-Dd5BNKTg.js  CreateExpense-Df6h4jw_.css  CreateExpense-beEZILnS.js  CreateExpense-oPVi3UR2.js  CreatePlan-BBflyAoL.js  CreatePlan-CMuojVpN.js  CreatePlan-CSVzUsd8.css  CreatePlan-CUwWXAS2.css  CreatePlan-D1hlj0Qn.js  CreatePlan-DWaSBMDG.js  CreatePlan-Hwh_y8yV.js  CreatePlan-xMEMOh21.js  CreateTravel-0wA-IV_B.js  CreateTravel-BP1iMZNy.js  CreateTravel-By6gPxjx.js  CreateTravel-DhZfYhon.js  CreateTravel-Dn0INWX3.js  CreateTravel-fHnY3pFk.js  DateTimeRangePicker-BMmizuMi.js  DateTimeRangePicker-BZ-lDnKq.js  DateTimeRangePicker-BwMNDowX.js  DateTimeRangePicker-COc1m8uU.css  (+160 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/androidfs-plugin/: default.toml
src-tauri/permissions/proxy-plugin/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/androidfs_plugin/: commands.rs  mod.rs
src-tauri/src/proxy_plugin/: commands.rs  mod.rs
(+97 files in other folders)
