[package]
name = "travel-plan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "travel_plan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
log = "0.4"
once_cell = "1.21.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
  "charset",
  "macos-system-configuration",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-commands = { path = "../tauri-plugin-commands/" }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
unicase = "2.8.1"
urlencoding = "2.1.3"
warp = "0.3.7"
